@@ -1,4 +1,4 @@
-relative_path = None
+source_path = None
 
 def html_it():
     """Run coverage and make an XML report for a."""
@@ -8,8 +8,8 @@ def html_it():
     import a            # pragma: nested
     cov.stop()          # pragma: nested
     cov.xml_report(a)
-    global relative_path
-    relative_path = cov.file_locator.relative_dir.rstrip('/')
+    global source_path
+    source_path = cov.file_locator.relative_dir.rstrip('/')
 
 import os
 if not os.path.exists("xml_2"):
@@ -20,8 +20,7 @@ runfunc(html_it, rundir="src")
 compare("gold_x_xml", "xml_2", scrubs=[
     (r' timestamp="\d+"', ' timestamp="TIMESTAMP"'),
     (r' version="[-.\w]+"', ' version="VERSION"'),
-    (r'<source>(\s)*?(.*)(\s)*?</source>',
-     '<source>%s</source>' % relative_path),
+    (r'<source>\s*.*?\s*</source>', '<source>%s</source>' % source_path),
     (r'/code/coverage/?[-.\w]*', '/code/coverage/VER'),
     ])
 clean("xml_2")
