@@ -1,4 +1,4 @@
-relative_path = None
+source_path = None
 
 def xml_it():
     """Run coverage and make an XML report for y."""
@@ -8,8 +8,8 @@ def xml_it():
     import y            # pragma: nested
     cov.stop()          # pragma: nested
     cov.xml_report(y, outfile="../xml_branch/coverage.xml")
-    global relative_path
-    relative_path = cov.file_locator.relative_dir.rstrip('/')
+    global source_path
+    source_path = cov.file_locator.relative_dir.rstrip('/')
 
 import os
 if not os.path.exists("xml_branch"):
@@ -20,8 +20,7 @@ runfunc(xml_it, rundir="src")
 compare("gold_y_xml_branch", "xml_branch", scrubs=[
     (r' timestamp="\d+"', ' timestamp="TIMESTAMP"'),
     (r' version="[-.\w]+"', ' version="VERSION"'),
-    (r'<source>(\s)*?(.*)(\s)*?</source>',
-     '<source>%s</source>' % relative_path),
+    (r'<source>\s*.*?\s*</source>', '<source>%s</source>' % source_path),
     (r'/code/coverage/?[-.\w]*', '/code/coverage/VER'),
     ])
 clean("xml_branch")
